from src.char.characteristic import Characteristic


class Attack(Characteristic):
    pass